// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs 1`] = `
Array [
  <Tabsstyles__Tab
    active={true}
    design="accent"
    key=".0"
    onClick={[Function]}
    size="l"
    value="Счета"
  >
    Счета
  </Tabsstyles__Tab>,
  <Tabsstyles__Tab
    active={false}
    design="accent"
    key=".1"
    onClick={[Function]}
    size="l"
    value="Операции"
  >
    Операции
  </Tabsstyles__Tab>,
  <Tabsstyles__Tab
    active={false}
    design="accent"
    key=".2"
    onClick={[Function]}
    size="l"
    value="Реквизиты"
  >
    Реквизиты
  </Tabsstyles__Tab>,
  <Tabsstyles__Tab
    active={false}
    design="accent"
    key=".3"
    onClick={[Function]}
    size="l"
    value="Овердрафт"
  >
    Овердрафт
  </Tabsstyles__Tab>,
  <Tabsstyles__Tab
    active={false}
    design="accent"
    disabled={true}
    key=".4"
    onClick={[Function]}
    size="l"
    value="Аресты"
  >
    Аресты
  </Tabsstyles__Tab>,
  <Tabsstyles__Tab
    design="accent"
    onClick={[Function]}
    size="l"
  >
    Еще... 
    <Tabsstyles__Arrow>
      <Down
        color="currentColor"
        size="m"
      />
    </Tabsstyles__Arrow>
  </Tabsstyles__Tab>,
]
`;

exports[`Tabs таб "Еще.." 1`] = `
Array [
  <Tabsstyles__Tab
    active={false}
    design="accent"
    key=".0"
    onClick={[Function]}
    size="l"
    value="Счета"
  >
    Счета
  </Tabsstyles__Tab>,
  <Tabsstyles__Tab
    active={false}
    design="accent"
    key=".1"
    onClick={[Function]}
    size="l"
    value="Операции"
  >
    Операции
  </Tabsstyles__Tab>,
  <Tabsstyles__Tab
    active={false}
    design="accent"
    key=".2"
    onClick={[Function]}
    size="l"
    value="Реквизиты"
  >
    Реквизиты
  </Tabsstyles__Tab>,
  <Tabsstyles__Tab
    active={false}
    design="accent"
    key=".3"
    onClick={[Function]}
    size="l"
    value="Овердрафт"
  >
    Овердрафт
  </Tabsstyles__Tab>,
  <Tabsstyles__Tab
    active={false}
    design="accent"
    disabled={true}
    key=".4"
    onClick={[Function]}
    size="l"
    value="Аресты"
  >
    Аресты
  </Tabsstyles__Tab>,
  <Tabsstyles__Tab
    design="accent"
    onClick={[Function]}
    size="l"
  >
    Еще... 
    <Tabsstyles__Arrow>
      <Down
        color="currentColor"
        size="m"
      />
    </Tabsstyles__Arrow>
  </Tabsstyles__Tab>,
]
`;
